design update and add picture to event

--- a/app/assets/stylesheets/pages/_show_event.scss
+++ b/app/assets/stylesheets/pages/_show_event.scss
@@ -7,10 +7,13 @@
 .event-show-card-top {
   display: flex;
   flex-direction: row;
+  margin-top: 10px;
+  margin-left: 5px;
 }
 
 .event-show-card-content {
   margin-top: 10px;
+  margin-left: 5px;
 }
 
 .event-icon-show {
@@ -23,6 +26,7 @@
   flex-direction: row;
   justify-content: space-between;
   margin-top: 30px;
+  margin-left: 5px;
 }
 
 .fa-trash-alt {
@@ -31,4 +35,13 @@
 
 .fa-pencil-alt {
   font-size: 25px;
+}
+
+.show-photo {
+  border: 1px solid lightgrey;
+
+  margin-top: 30px;
+  align-self: center;
+  border-radius: 5px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
 }
