--- a/app/views/events/timeline.html.erb
+++ b/app/views/events/timeline.html.erb
@@ -48,9 +48,11 @@
                 </div>
               </div>
             <% else %>
-              <div class="card event baby-profile-card" id="card-type-evenement" style="background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('<%= cloudinary_url @baby.photo.key %>') ">
-                <h2 class="card-type-evenement-text"><%= event.value_string%></h2>
-              </div>
+              <% if event.photo.attached? %>
+                <div class="card event baby-profile-card" id="card-type-evenement" style="background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('<%= cloudinary_url event.photo.key %>') ">
+                  <h2 class="card-type-evenement-text"><%= event.value_string%></h2>
+                </div>
+              <% end %>
             <% end %>
           <% end %>
         </div>
