--- a/app/assets/stylesheets/components/_timeline.scss
+++ b/app/assets/stylesheets/components/_timeline.scss
@@ -26,6 +26,15 @@
 #card-timeline {
   margin-left: 55px;
   margin-right: 0;
+  position: relative;
+}
+
+.fa-notes-medical{
+  color: $button;
+  font-size: 20px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
 #card-type-evenement {
