white text img timeline

--- a/app/assets/stylesheets/components/_timeline.scss
+++ b/app/assets/stylesheets/components/_timeline.scss
@@ -79,6 +79,9 @@
   padding-left: 10px;
   position: relative;
   background-color: inherit;
+  #white-text{
+    color: white;
+  }
 }
 
 /* The circles on the timeline */
