adapted format in show baby + timeline

--- a/app/views/babies/show.html.erb
+++ b/app/views/babies/show.html.erb
@@ -6,7 +6,7 @@
   <div class="row">
     <div class="col">
       <%= link_to baby_details_path(@baby) do%>
-      <div class="card baby-profile-card mb-3" style="background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('<%= cloudinary_url @baby.photo.key %>') ">
+      <div class="card baby-profile-card mb-3" style="background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('<%= cloudinary_url @baby.photo.key, :width=>300, :height=>190, :crop=>"thumb", :gravity=>"faces" %>') ">
         <div class="d-flex justify-content-between">
           <div class="last-eat d-flex align-items-center">
             <i class="fas fa-utensils"></i>
