--- a/app/views/babies/index.html.erb
+++ b/app/views/babies/index.html.erb
@@ -1,4 +1,9 @@
 <div class="container">
+  <div>
+    <%= link_to :root, class: "navbar-brand" do %>
+    <i class="fas fa-chevron-left"></i>
+  <% end %>
+  </div>
   <div class="text-up">
     <h1>Sélectionner</h1>
     <p>Un enfant</p>
