--- a/app/views/events/choose_type.html.erb
+++ b/app/views/events/choose_type.html.erb
@@ -1,6 +1,9 @@
 <div class="container">
-
-
+  <div>
+    <%= link_to baby_path(@baby), class: "navbar-brand" do %>
+    <i class="fas fa-chevron-left"></i>
+  <% end %>
+  </div>
   <div class="text mb-2">
     <h1>Ajouter</h1>
     <p>un événement</p>
