--- a/app/views/babies/details.html.erb
+++ b/app/views/babies/details.html.erb
@@ -1,5 +1,10 @@
 <div class="container">
   <div>
+    <%= link_to baby_path(@baby), class: "navbar-brand" do %>
+    <i class="fas fa-chevron-left"></i>
+  <% end %>
+  </div>
+  <div>
     <h1><%= @baby.name %></h1>
     <div >
       <%= form_with url: baby_details_path(@baby), method: :get do |form| %>
