--- a/app/views/babies/show.html.erb
+++ b/app/views/babies/show.html.erb
@@ -1,5 +1,10 @@
 <div class="container">
   <div>
+    <%= link_to babies_path, class: "navbar-brand" do %>
+    <i class="fas fa-chevron-left"></i>
+  <% end %>
+  </div>
+  <div>
     <h1><%= @baby.name %></h1>
     <p><%= @age %></p>
   </div>
@@ -24,7 +29,7 @@
       <% end %>
     </div>
   </div>
-  
+
     <div class="row">
       <div class="col-8">
         <div class="card last-event bg-foot mb-3 d-flex flex-column align-items-end ">
@@ -42,7 +47,7 @@
         </div>
       </div>
     </div>
-  
+
   <%= link_to event_timeline_baby_path(@baby), class: "text-decoration" do %>
     <div class="row">
       <div class="col">
