--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,5 +1,10 @@
 <body>
   <div class="container">
+    <div>
+      <%= link_to baby_event_path(@event), class: "navbar-brand" do %>
+      <i class="fas fa-chevron-left"></i>
+    <% end %>
+    </div>
     <h1>Modifier Evenement</h1>
     <%= render 'form' %>
   </div>
