--- a/app/views/events/timeline.html.erb
+++ b/app/views/events/timeline.html.erb
@@ -1,5 +1,10 @@
 <div class="container-page">
   <div class="container">
+    <div>
+      <%= link_to baby_path(@baby), class: "navbar-brand" do %>
+      <i class="fas fa-chevron-left"></i>
+    <% end %>
+    </div>
     <div class="text-up">
       <h1><%= @baby.name %></h1>
       <p>Un evénement</p>
