--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -18,7 +18,7 @@
       <%= f.input :start_time, as: :datetime, :label => 'Date et Heure', html5: true %>
       <%= f.input :end_time, as: :datetime, :label => 'Fin', html5: true if @event.type == "Dodo" || @event.type == "Maladie" %>
       <%= f.input :comment, :label => 'Commentaire' %>
-      <%= f.input :photo, as: :file if @event.type == "Evenement" || @event.type == "Bobo" || @event.type == "Medicament" || @event.type == "Maladie" || @event.type =="Repas" %>
+      <%= f.input :photo, as: :file if @event.type == "Evenement" || @event.type == "Bobo" || @event.type == "Medicament" || @event.type == "Maladie" || @event.type =="Repas" || @event.type =="Couche" %>
       <%= f.input :type, as: :hidden %>
       <%= f.submit %>
     <% end %>
